part of the screen as palette

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
                 margin: 0;
             }
 
-            #container, #main {
+            #container {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                height: 400px;
+                width: 400px;
+                max-width: 100%;
+                max-height: 100%;
+                border: 1px dashed #ccc;
+            }
+
+            #main {
                 position: absolute;
                 left: 0;
                 top: 0;
@@ -24,17 +35,18 @@
         <script src="examples/lib/stats.min.js"></script>
         <script src="build/index.js"></script>
         <script>
+            var container = document.getElementById('container');
             var canvas = document.getElementById('main');
-            canvas.width = window.innerWidth * 2;
-            canvas.height = window.innerHeight * 2;
+            canvas.width = container.clientWidth * 2;
+            canvas.height = container.clientHeight * 2;
 
             var palette = new PP.Palette(canvas);
             var renderer = palette.renderer;
 
             window.onresize = function () {
                 palette.resize(
-                    window.innerWidth * palette.pixelRatio,
-                    window.innerHeight * palette.pixelRatio
+                    container.clientWidth * palette.pixelRatio,
+                    container.clientHeight * palette.pixelRatio
                 );
             }
 
